# rcbot2

./: .gitignore  .gitmodules  AIFactory.cpp  AIFactory.h  AMBuildScript  AMBuilder  BotDefines.h  BotKnowledgeBase.cpp  BotKnowledgeBase.h  BotLearningData.h  BotTasks.h  CCaptureControlPointSched_FF.cpp  CCaptureControlPointSched_FF.h  CFFPlayer.cpp  CFFPlayer.h  CMakeLists.txt  CMedicAI_FF.cpp  CMedicAI_FF.h  CRCBotPlugin.cpp  CRCBotPlugin.h  CStandOnPointTask_FF.h  EngineInterfaces.h  FFBaseAI.cpp  FFBaseAI.h  FFBotUtils.cpp  FFBot_SDKDefines.h  FFCTFTasks.cpp  FFCTFTasks.h  FFControlPointTasks.cpp  FFControlPointTasks.h  FFDemomanAI.cpp  FFDemomanAI.h  FFEngineerAI.cpp  FFEngineerAI.h  FFLuaBridge.cpp  FFLuaBridge.h  FFPyroAI.cpp  FFPyroAI.h  FFSoldierAI.cpp  FFSoldierAI.h  (+20 more)
.github/workflows/: build-on-default-branch-commit.yml
fortressforever/lua/: ff_bleepbloop_b3.lua
fortressforever/scripts/: gameinfo.txt  steam.inf
linux_sdk/: Makefile.rcbot2  Makefile.vcpm
lua/: lua.hpp
lua_scripts/: test_callbacks.lua
metamod/core/: ISmmPluginExt.h  metamod_plugins.cpp  metamod_provider.h  vsp_bridge.cpp
metamod/public/: metamod_version.h
metamod/versionlib/: versionlib.cpp
my_source_plugin/: Makefile  main.cpp
my_source_plugin/public/: color.h  eiface.h  interface.h
package/config/: accessclients.ini  config.ini  hookinfo.ini  weapons.ini
public/mathlib/: mathlib.h
rcbot/: logging.cpp
rcbot_subcmds/: users.cpp
scripting/: rcbot_sample.sp
scripting/include/: rcbot2.inc
sm_ext/: bot_sm_ext.cpp  bot_sm_natives.cpp  bot_sm_natives.h
utils/RCBot2_meta/: HPB_Bot2.vcproj  bot.cpp  bot.h  bot_accessclient.cpp  (+42 more)
versioning/: build_info.cpp
(+45 files in other folders)
